--- a/space-console/pom.xml
+++ b/space-console/pom.xml
@@ -59,6 +59,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--此处一定要添加goals，因为用了spring-boot-dependencies，少了主清单属性-->
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
