--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.boot.version>1.5.7.RELEASE</spring.boot.version>
     <junit.version>4.12</junit.version>
+    <druid.version>1.1.9</druid.version>
+    <mybatis.version>1.3.2</mybatis.version>
   </properties>
 
   <dependencyManagement>
