--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -2,3 +2,11 @@
 
 image.name=pic-dev
 image.url=www.pic-dev
+
+#数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=tclonline
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#druid配置先使用默认
