--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -9,6 +9,6 @@ spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&aut
 spring.datasource.username=root
 spring.datasource.password=tclonline
 
-#druid配置先使用默认（选配）
+#druid配置（使用默认,选配）
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
