--- a/space-console/src/main/resources/application.properties
+++ b/space-console/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 #默认环境
 spring.profiles.active=dev
 
-#server属性
-server.context-path=/console
+#server属性(spring boot2.0属性名新增servlet)
+server.servlet.context-path=/console
