--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
     <junit.version>4.12</junit.version>
     <druid.version>1.1.9</druid.version>
     <mybatis.version>1.3.2</mybatis.version>
+    <lang3.version>3.7</lang3.version>
+    <codec.version>1.11</codec.version>
+    <io.version>2.6</io.version>
   </properties>
 
   <dependencyManagement>
