补全登录系统

--- a/space-console/src/main/resources/application.properties
+++ b/space-console/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=dev
 
 #server属性(spring boot2.0属性名新增servlet)
 server.servlet.context-path=/console
+
+#cookies最大过期时间
+client.cookie.max-age=604800
