--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ image.name=pic-dev
 image.url=www.pic-dev
 
 #数据库配置(必配)
-#spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=tclonline
+spring.datasource.password=kgdiyniqmq
 
 #druid配置（使用默认,选配）
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
