--- a/space-console/src/main/resources/application.properties
+++ b/space-console/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.servlet.context-path=/console
 
 #cookies最大过期时间
 client.cookie.max-age=604800
+
+#mybatis 将数据库字段名映射为java驼峰格式
+mybatis.configuration.mapUnderscoreToCamelCase=true
