--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -9,6 +9,19 @@ spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReco
 spring.datasource.username=root
 spring.datasource.password=kgdiyniqmq
 
-#druid配置（使用默认,选配）
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#druid配置
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.filters=stat
+spring.datasource.druid.max-active=20
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.max-wait=5000
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=select 'x'
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=false
+spring.datasource.druid.max-open-prepared-statements=-1
