--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ image.name=pic-dev
 image.url=www.pic-dev
 
 #数据库配置(必配)
-spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
 #spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=kgdiyniqmq
