修改部分配置

--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -7,10 +7,9 @@ image.url=www.pic-dev
 spring.datasource.url=jdbc:mysql://localhost:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
 #spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=kgdiyniqmq
+spring.datasource.password=tclonline
 
 #druid配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.filters=stat
 spring.datasource.druid.max-active=20
