--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -10,6 +10,7 @@ spring.datasource.username=walter
 spring.datasource.password=Walter_12
 
 #druid配置
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.filters=stat
 spring.datasource.druid.max-active=20
