修改git忽略项

--- a/space-console/.gitignore
+++ b/space-console/.gitignore
@@ -1,25 +1,25 @@
+# maven ignore
 target/
-!.mvn/wrapper/maven-wrapper.jar
+*.jar
+*.war
+*.zip
+*.tar
+*.tar.gz
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
+# eclipse ignore
+.settings/
 .project
-.settings
-.springBeans
-.sts4-cache
+.classpath
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
+# idea ignore
+.idea/
 *.ipr
+*.iml
+*.iws
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
