--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
+    <spring.boot.version>2.1.4.RELEASE</spring.boot.version>
     <junit.version>4.12</junit.version>
-    <druid.version>1.1.9</druid.version>
+    <druid.version>1.1.16</druid.version>
     <mybatis.version>1.3.2</mybatis.version>
     <lang3.version>3.7</lang3.version>
     <codec.version>1.11</codec.version>
@@ -51,12 +51,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
+          <version>3.8.0</version>
           <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
+            <source>1.8</source>
+            <target>1.8</target>
             <encoding>UTF-8</encoding>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.1.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
