--- a/space-console/src/main/resources/application-dev.properties
+++ b/space-console/src/main/resources/application-dev.properties
@@ -8,9 +8,9 @@ image.url=www.pic-dev
 #spring.datasource.username=walter
 #spring.datasource.password=Walter_12
 
-spring.datasource.url=jdbc:mysql://10.128.208.160:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://192.168.1.111:3306/space?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=tclonline
+spring.datasource.password=kgdiyniqmq
 
 
 #druid配置
