--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>space-console</module>
+        <module>space-eureka</module>
     </modules>
 
     <properties>
@@ -28,6 +29,7 @@
         <aspectj.version>1.9.2</aspectj.version>
         <lombok.version>1.18.10</lombok.version>
     </properties>
+
 
     <dependencyManagement>
         <dependencies>
