配置eureka客户端

--- a/space-console/pom.xml
+++ b/space-console/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!--eureka client-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 		<!--redis-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
