--- a/space-console/src/main/resources/application-dev.yml
+++ b/space-console/src/main/resources/application-dev.yml
@@ -30,3 +30,10 @@ logging:
   level:
     #日志级别
     com.walter.space.console.dao: debug
+
+#eureka
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:1001/eurekaServer/eureka
