--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>space-console</module>
         <module>space-eureka</module>
+        <module>space-usercenter</module>
     </modules>
 
     <properties>
