增加消费者测试工程

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>space-console</module>
         <module>space-eureka</module>
         <module>space-usercenter</module>
+        <module>space-consumer</module>
     </modules>
 
     <properties>
