--- a/space-gateway/pom.xml
+++ b/space-gateway/pom.xml
@@ -3,16 +3,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>space-usercenter</artifactId>
+    <artifactId>space-gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>space-usercenter</name>
-    <description>User Center for Space</description>
+    <name>space-gateway</name>
+    <description>api gateway for Space</description>
 
     <parent>
         <groupId>com.walter.space</groupId>
         <artifactId>space</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,15 +23,12 @@
 
     <dependencies>
         <!--spring boot start-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--actuator 监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--spring boot end-->
+        <!--spring cloud end-->
 
         <!--spring cloud start-->
         <!--eureka client-->
@@ -38,6 +36,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+        <!--zuul-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+
         <!--spring cloud end-->
 
     </dependencies>
