--- a/space-gateway/pom.xml
+++ b/space-gateway/pom.xml
@@ -22,15 +22,12 @@
     </properties>
 
     <dependencies>
-        <!--spring boot start-->
         <!--actuator 监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--spring cloud end-->
 
-        <!--spring cloud start-->
         <!--eureka client-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -43,7 +40,20 @@
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
 
-        <!--spring cloud end-->
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--apache commons-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${lang3.version}</version>
+        </dependency>
 
     </dependencies>
 
