--- a/space-usercenter/pom.xml
+++ b/space-usercenter/pom.xml
@@ -21,24 +21,29 @@
     </properties>
 
     <dependencies>
-        <!--spring boot start-->
+        <!--spring boot web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--spring actuator-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--spring boot end-->
 
-        <!--spring cloud start-->
         <!--eureka client-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <!--spring cloud end-->
+
+        <!--rabbit mq-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
 
     </dependencies>
 
