--- a/space-consumer/src/main/resources/application-dev.yml
+++ b/space-consumer/src/main/resources/application-dev.yml
@@ -8,3 +8,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1001/eurekaServer/eureka
+
+#rabbit mq
+spring:
+  rabbitmq:
+    host: 192.168.1.111
+    port: 5672
+    username: admin
+    password: kgdiyniqmq
+    virtual-host: space_vhost
