--- a/space-eureka/pom.xml
+++ b/space-eureka/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>space-eureka</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${parent.version}</version>
 	<name>space-eureka</name>
 	<description>Eureka project for Space</description>
 
