--- a/space-gateway/pom.xml
+++ b/space-gateway/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>space-gateway</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${parent.version}</version>
     <name>space-gateway</name>
     <description>api gateway for Space</description>
 
