--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <io.version>2.6</io.version>
         <aspectj.version>1.9.2</aspectj.version>
         <lombok.version>1.18.10</lombok.version>
+        <mapper.version>1.1.4</mapper.version>
     </properties>
 
 
@@ -78,6 +79,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>${mapper.version}</version>
             </dependency>
 
             <!--apache commons-->
