--- a/space-console/pom.xml
+++ b/space-console/pom.xml
@@ -57,6 +57,10 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+		</dependency>
 
 		<!--apache commons-->
 		<dependency>
