--- a/space-console/pom.xml
+++ b/space-console/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.walter.space</groupId>
 		<artifactId>space</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<properties>
@@ -21,16 +21,15 @@
 	</properties>
 
 	<dependencies>
+		<!--space-->
+		<dependency>
+			<groupId>com.walter.space</groupId>
+			<artifactId>space-common</artifactId>
+		</dependency>
 		<!--spring-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<!--eureka client-->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<!--redis-->
@@ -62,20 +61,6 @@
 			<artifactId>mapper-spring-boot-starter</artifactId>
 		</dependency>
 
-		<!--apache commons-->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-		</dependency>
-
 		<!--aop-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,18 +75,6 @@
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
 
-		<!--lombok-->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-
-		<!--test-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
