--- a/space-consumer/pom.xml
+++ b/space-consumer/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.walter.space</groupId>
         <artifactId>space</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <properties>
@@ -38,12 +38,6 @@
         </dependency>
 
         <!--spring cloud-->
-        <!--eureka client-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-
         <!--feign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -56,17 +50,7 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
-        <!--rabbit mq-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-        </dependency>
 
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
 
     </dependencies>
 
