--- a/space-eureka/pom.xml
+++ b/space-eureka/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.walter.space</groupId>
 		<artifactId>space</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<properties>
