--- a/space-console/pom.xml
+++ b/space-console/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
 
+		<!--test-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
