--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 
     <modules>
         <module>space-console</module>
-        <module>space-common</module>
     </modules>
 
     <properties>
@@ -32,6 +31,7 @@
         <aspectj.version>1.9.2</aspectj.version>
         <lombok.version>1.18.10</lombok.version>
         <mapper.version>1.1.4</mapper.version>
+        <java.version>1.8</java.version>
     </properties>
 
 
