--- a/space-eureka/src/main/resources/application-dev.yml
+++ b/space-eureka/src/main/resources/application-dev.yml
@@ -7,5 +7,5 @@ eureka:
   instance:
     hostname: localhost
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: false #是否将自己注册到eureka server
+    fetch-registry: false #是否从eureka server获取注册的服务信息
